Game over e tempo de jogo

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                 </div>
             </div>
         </header>
+
+        <div class="winner-game">tie</div>
         <canvas id="canvas-game"></canvas>
     </div>
     <script src="./index.js"></script>
