Sprite do background

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <div class="winner-game">tie</div>
         <canvas id="canvas-game"></canvas>
     </div>
+
+    <script src="./js/utils.js"></script>
+    <script src="./js/classes.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
